Changed files according to the reviewer's feedback 2

--- a/fordgobike_exploration_slide_nb.ipynb
+++ b/fordgobike_exploration_slide_nb.ipynb
@@ -3367,29 +3367,44 @@
     }
    ],
    "source": [
-    "!wget -O exploration_template.ipynb https://dataplatform.cloud.ibm.com/data/notebooks/converter/assets/7b7cd3ad-9fa0-4d8f-9555-06c9674173cc?format=ipynb\\&project=50649871-58c0-4c8c-a3ab-2e053456f2a7"
+    "!wget -O fordgobike_exploration_slide_nb.ipynb https://dataplatform.cloud.ibm.com/data/notebooks/converter/assets/7b7cd3ad-9fa0-4d8f-9555-06c9674173cc?format=ipynb\\&project=50649871-58c0-4c8c-a3ab-2e053456f2a7"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+	  "[NbConvertApp] Converting notebook fordgobike_exploration_slide.ipynb to slides\n",
+	  "[NbConvertApp] Writing 1265861 bytes to fordgobike_exploration_slide.slides.html\n",
+	  "[NbConvertApp] Redirecting reveal.js requests to https://cdnjs.cloudflare.com/ajax/libs/reveal.js/3.1.0\n",
+	  "Serving your slides at http://127.0.0.1:8000/fordgobike_exploration_slide_nb.slides.html\n",
+	  "Use Control-C to stop this server\n",
+	  "WARNING:tornado.access:404 GET /custom.css (127.0.0.1) 1.99ms\n",
+	  "WARNING:tornado.access:404 GET /custom.css (127.0.0.1) 1.00ms\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "!jupyter nbconvert exploration_template.ipynb --to slides --post serve --template output_toggle"
+    "!jupyter nbconvert fordgobike_exploration_slide_nb.ipynb --to slides --post serve --template output-toggle"
    ]
   }
  ],
  "metadata": {
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python 3.6 with Spark",
+   "display_name": "Python 3.6.6 64-bit ('base': conda)",
    "language": "python3",
-   "name": "python36"
+   "name": "python_defaultSpec_1600601092366"
   },
   "language_info": {
    "codemirror_mode": {
@@ -3401,7 +3416,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.6-final"
   }
  },
  "nbformat": 4,
